[+]: add google API KEY and service

--- a/ProxiJob/app/src/main/res/values/strings.xml
+++ b/ProxiJob/app/src/main/res/values/strings.xml
@@ -67,4 +67,5 @@
 
     <string name="com_parse_ui_login_dispatch_user_logged_in">"User logged in, starting: "</string>
     <string name="com_parse_ui_login_dispatch_user_not_logged_in">User not logged in, starting ParseLoginActivity</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
